Made the about me responsive on mobile resolution, fixed a bug with the height of the .bottom container.

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,28 +1,32 @@
-.about-container{
-    border: white solid 1px;
-    background-color: rgba(247, 247, 247, 0.788); 
-    border-radius:15px;
-    padding: 30px 50px;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    text-align: center;
-    justify-content: center;
-    p {
-        font-size: 20px;
-        padding:20px 30px;
-        line-height: 2;
-        text-align: left;
-        
-    }
-    img {
-        width:440px;
-        height: auto;
-        border-radius: 30px;
-        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-        margin-left:20%;
-    }
-
-}
 .box2{
-    padding: 20px;   
+    padding: 20px;  
+        .about-container{
+        border: white solid 1px;
+        background-color: rgba(247, 247, 247, 0.788); 
+        border-radius:15px;
+        padding: 30px 50px;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        text-align: center;
+        justify-content: center;
+        align-self: center;
+     
+        #imgcut{
+            display: none;
+        }
+        .about-text {
+            font-size: 20px;
+            padding:20px 30px;
+            line-height: 2;
+            text-align: left;
+            
+        }
+        #about-img {
+            width:440px;
+            height: auto;
+            border-radius: 30px;
+            box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+            margin-left:20%;
+        }
+    }
 }
