--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -28,10 +28,10 @@ body{
         }
         
     }
-}
+
 .bottom {
       display:flex;
-    
+      min-height:initial;
    
 //index container
 
@@ -144,23 +144,41 @@ body{
                     }
     }
  }
-.about-container{
-   
-    img{
-       display:none;
-       margin:0;
+
+ //about
+
+    .about-container{
+        border: white solid 1px;
+        background-color: rgba(247, 247, 247, 0.788); 
+        border-radius:15px;
+        padding: 2px 2px;
+        grid-template-columns: none;
+        text-align: center;
+        justify-content: center;
+        #about-img{
+        display:none;
+        margin:0;
+        justify-content: center;
+        align-items: center;
+        }
+        .about-text{ 
+        font-size:20px;
+        padding:0px; 
+        text-align: justify;
+        width: 100%;
+        }   
+        #imgcut{
+            display: block;
+            
+            width: 100%;
+            height: auto;
+ 
+        }
     }
-    p{
-    
-    
-     font-size: 16px;
-     padding:px;
-        
-}
-}
-.box2 {
-    padding:1px;
-}
+    .box2 {
+        padding:1px;
+        margin:0;
+    }
 
 //calendar
     .calendar{
@@ -336,5 +354,6 @@ body{
 }
 #check:checked ~ ul{
     left:0;
+}
 }
 }
