--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -25,7 +25,7 @@
         
         width: 100%;
         height: 100%;
-        max-height: 460px;
+        max-height: fit-content;
         transition-duration: .3s;
         justify-content: center;
         text-align: center;
